# smart-hive

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml  ldproxy-wrapper.sh
.github/configs/: sdkconfig.defaults
.github/workflows/: main.yml
hardware-abstraction/: Cargo.toml
hardware-abstraction/src/: lib.rs
hardware-abstraction/src/mcus/: hal_esp32.rs  mod.rs
mcus-simulation/: diagram.json  wokwi.toml
mcus-simulation/esp32-mini-1/: flasher_args.json
smart-hive/: Cargo.toml
smart-hive/src/: main.rs
smart-hive/src/event_loop/: event_loop.rs  handlers.rs  mod.rs
smart-hive/src/mqtt/: mqtt.rs
smart-hive/src/wi_fi/: mod.rs  wi_fi.rs
software-defined-hive/: Cargo.toml
software-defined-hive/src/: lib.rs
software-defined-hive/src/controller/: controller.rs
software-defined-hive/src/state/: actuators.rs  hive.rs  mod.rs  sensors.rs  traits.rs
software-defined-hive/src/state/policy/: harvest.rs  mod.rs
software-defined-hive/src/utils/: sensors.rs
