[workspace]
resolver = "2"
members = [
    # Software-defined product (SDP) lib
    "software-defined-hive",
    # Hardware Abstraction Layer (HAL) lib
    "hardware-abstraction",
    # Smart Hive (SDP + HAL)
    "smart-hive",
]

[workspace.dependencies]
esp-idf-sys = { version = "0.36.1", features = ["binstart"] }
esp-idf-hal = "0.45.2"
esp-idf-svc = "0.51.0"
embuild = "0.33.1"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
