[package]
name = "smart-hive"
version = "0.2.0"
edition = "2024"

[dependencies]
software-defined-hive = { path = "../software-defined-hive" }
hardware-abstraction = { path = "../hardware-abstraction" }
esp-idf-sys = { workspace = true, features = ["binstart"] }
esp-idf-hal.workspace = true
esp-idf-svc.workspace = true
log = "0.4.29"
[build-dependencies]
embuild = { workspace = true, features = ["espidf"] }
