[package]
name = "smart-hive"
version = "0.2.0"
edition = "2024"

[dependencies]
software-defined-hive = { path = "../software-defined-hive" }
hardware-abstraction = { path = "../hardware-abstraction" }
esp-idf-hal.workspace = true
esp-idf-svc.workspace = true
log.workspace = true
serde_json.workspace =  true
serde = { workspace = true, features = ["derive"] }
[build-dependencies]
embuild = { workspace = true, features = ["espidf"] }
